--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h1>Breakfast Taco</h1>
         <div class="product">
-            <img src="_Breakfast Taco (4).jpg" alt="Breakfast Taco" width="100%">
+            <img src="/_Breakfast Taco (4).jpg" alt="Breakfast Taco" width="100%">
             <p><strong>Description:</strong> A delicious breakfast taco with customizable ingredients.</p>
             
             <h3>Choose Any Two (Only $3.29!)</h3>
