--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Breakfast Taco</h1>
         <div class="product">
             <img src="https://i.postimg.cc/jSNvCY93/Breakfast-Taco-4.jpg" alt="Breakfast Taco" width="100%">
-            <p><strong>Description:</strong> A delicious breakfast taco with customizable ingredients.</p>
+            <!--<p><strong>Description:</strong> A delicious breakfast taco with customizable ingredients.</p>-->
             
             <h3>Choose Any Two (Only $3.29!)</h3>
             <label><input type="checkbox" name="chooseTwo" value="Egg" onclick="limitSelection(this, 'chooseTwo', 2)"> Egg</label><br>
