--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
         
         function checkout() {
-            window.location.href = "survey.html";
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSdkmm304Ed8Ztk0wlWKphpH7fx13Bg_drr1ccrdwxUv0Fu2sw/viewform?usp=dialog";
         }
     </script>
 </body>
