--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Mushroom</label><br>
                 <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Pico De Gallo</label><br>
                 <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Cheese</label><br>
+                <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Potato</label><br>
+                <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Refried Black Beans</label><br>
+                <label><input type="checkbox" name="veggies" value="0.49" onclick="updateTotal()"> Refried Pinto Beans</label><br>
                 
                 <h3>Add Protein ($0.79 each)</h3>
                 <label><input type="checkbox" name="protein" value="0.79" onclick="updateTotal()"> Bacon</label><br>
